# loansasa

./: Cargo.toml  README.md  diesel.toml
migrations/2024-07-31-065449_create_users/: up.sql
migrations/2024-07-31-065545_create_loans/: up.sql
migrations/2024-07-31-082702_create_users/: up.sql
migrations/2024-07-31-082745_create_loans/: down.sql  up.sql
migrations/2024-08-28-101212_personal_details/: up.sql
src/: main.rs  schema.rs
src/controllers/: loans.rs  mod.rs  users.rs
src/db_operations/: db.rs  loans.rs  mod.rs  users.rs
src/models/: app_state.rs  loans.rs  mod.rs  personal_details.rs  ui.rs  users.rs
templates/: base.html  dashboard.html  dashboard2.html  home.html  login.html  newloan.html  personal_details.html  register.html
