[package]
name = "loansasa"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2"] }
r2d2 = "0.8"
dotenvy = "0.15"
actix-web = "4"
actix-session = { version = "0.6", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.38" , features = ["serde"] }
askama = { version = "0.12.1", default-features = false }
bcrypt = "0.15.1"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
actix-files = "0.6.6"
